Replace User and Examination with Account.
This is an intermediate step to keep the commits reasonable.
Examinations will be rebuilt shortly.
